--- a/css/title.css
+++ b/css/title.css
@@ -33,6 +33,67 @@
     src: url('../fonts/LuckiestGuy-Regular.ttf') format('truetype');
 }
 
+
+.confirm-window {
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    width: 32%;
+    height: 32%;
+    margin-top: 35vh;
+    /* margin-left: 34%; */
+    background: linear-gradient(180deg, #00a3cc 20%, #007a41 80%);
+    border: 0.5vw solid black;
+    border-radius: 1.2vw;
+    overflow: hidden;
+    user-select: none;
+    z-index: 104;
+}
+
+.confirm-text {
+    height: 60%;
+    text-align: center;
+    font-size: 2.5vw;
+    font-family: 'WinkySans';
+    font-weight: 700;
+    line-height: 1.2;
+    color: #000000;
+    margin-top: 2vh;
+}
+
+.confirm-button-container {
+    margin-top: 0vh;
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+}
+
+.confirm-yes-button {
+    width: 8.2vw;
+    height: 7vh;
+    margin-top: 0;
+    font-size: 2.3vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.3vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #00a524, #005207);
+}
+
+.confirm-no-button {
+    width: 8.2vw;
+    height: 7vh;
+    margin-top: 0;
+    font-size: 2.3vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.3vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #9e0000, #690000);
+}
+
 body {
     background: linear-gradient(180deg, #2e97c1, #1e6785);
     height: 100vh;
@@ -154,7 +215,7 @@ button:hover::before {
 
 button:hover {
     filter: brightness(1.4);
-    border: 0.3vw solid rgb(255, 255, 255);
+    border: 0.3vw solid #ffffff;
 }
 
 .flag {
@@ -166,6 +227,183 @@ button:hover {
     border: 0.2vw solid black;
 
     z-index: 1;
+}
+
+.cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.541);
+    display: none;
+    z-index: 2;
+}
+
+.options-screen {
+    position: fixed;
+    top: 20vh;
+    left: 20vw;
+    width: 60vw;
+    height: 60vh;
+    background-color: #0082d8;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 2vw;
+    border: 0.6vw solid rgb(0, 69, 109);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+
+    z-index: 3;
+}
+
+.options-screen h2 {
+    font-family: 'LuckiestGuy';
+    font-weight: 800;
+    font-size: 5vw;
+    letter-spacing: 0.1vw;
+    color: #daeaff;
+    margin: 0.5vh 0 0 0;
+    padding: 0;
+    text-align: center;
+}
+
+.options-content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    margin-top: 2.5vh;
+}
+
+.options-screen label {
+    font-family: 'LuckiestGuy';
+    font-weight: 800;
+    font-size: 2vw;
+    color: #a7cdff;
+    margin-top: 1vh;
+    margin-bottom: 0.2vw;
+    margin-left: 20%;
+    padding: 0;
+    text-align: center;
+}
+
+.options-screen input[type="range"] {
+    width: 60%;
+    height: 1.5vw;
+    margin-left: 20%;
+    margin-right: 20%;
+    background: #ddd;
+    border-radius: 0.5vw;
+    outline: none;
+}
+
+.options-screen input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    margin-top: -0.25vw;
+    cursor: pointer;
+    border: 1vw solid #000;
+    box-shadow: 0 0 5px rgb(0, 0, 0);
+    background: #ff0000;
+    width: 4vw;
+    height: 2vw;
+    border-radius: 50%;
+}
+
+.options-screen input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 1.5vw;
+    background: #ddd;
+    border-radius: 0.5vw;
+}
+
+.dropdown {
+    width: 100%;
+}
+
+.dropdown-button {
+    width: 60%;
+    height: 4vw;
+    margin-top: 0.5vw;
+    margin-left: 20%;
+    background-color: #004561;
+    padding: 0 0 1vh 0;
+    font-size: 2.6vw;
+    line-height: 0.9;
+}
+
+.dropdown-option {
+    width: 75%;
+    height: 2.9vw;
+    background-color: #0c8ec2;
+    font-size: 2.6vw;
+    font-family: "CherryBomb";
+    font-weight: 800;
+    line-height: 0.9;
+    padding: 0 0 0.8vh 0;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 0.3vh;
+    margin-left: 12.5%;
+
+    border-radius: 0.5vw;
+    border: 0.3vw solid #000000;
+
+    text-shadow: 
+    -2px -2px 0 #000,  2px -2px 0 #000,  0px  2px 0 #000,  2px 0px 0 #000,
+    0px -2px 0 #000, -2px 0px 0 #000, -2px  2px 0 #000,  2px  2px 0 #000,
+    -3px -3px 0 #000,  3px -3px 0 #000,  0px  3px 0 #000,  3px 0px 0 #000,
+    0px -3px 0 #000, -3px 0px 0 #000, -3px  3px 0 #000,  3px  3px 0 #000;   
+}
+
+.options-screen button:hover {
+    filter: brightness(1.3);
+    border: 0.3vw solid #000000;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 44.3vh;
+    left: 20%;
+    width: 57.5%;
+    height: 20vh;
+    background-color: #003246;
+    border: 0.3vw solid black;
+    border-radius: 0 0 0.6vw 0.6vw;
+    padding: 0.5vw;
+    color: white;
+    overflow-y: auto;
+    z-index: 4;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    gap: 1vw;
+    margin-top: 2.5vh;
+}
+
+.button-container button {
+    width: 10vw;
+    height: 4vw;
+    font-size: 2vw;
+}
+
+.save-options-button {
+    background-color: #004e17;
+}
+
+.cancel-options-button {
+    background-color: #750000;
 }
 
 .bubble {
